力扣、牛客补题

--- a/练习赛合集.md
+++ b/练习赛合集.md
@@ -1410,6 +1410,131 @@ public:
 
 
 
+### 双周赛144
+
+#### 零数组变换III(反悔贪心、堆)
+
+```cpp
+class Solution {
+public:
+    int maxRemoval(vector<int>& nums, vector<vector<int>>& queries) {
+        ranges::sort(queries);
+        int n = nums.size(), sum = 0;
+        vector<int> diff(n+1);
+        int j = 0;
+        priority_queue<int> pq;
+        for(int i = 0; i < n; i++) {
+            sum += diff[i];
+            while(j < queries.size() && queries[j][0] <= i) {
+                pq.push(queries[j][1]);
+                j++;
+            }
+            while(!pq.empty() && sum < nums[i] && pq.top() >= i) {
+                sum++;
+                diff[pq.top()+1]--;
+                pq.pop();
+            }
+            if(sum < nums[i]) return -1;
+        }
+        return pq.size();
+    }
+};
+```
+
+
+
+### 周赛426
+
+#### 连接两棵树后最大目标节点数目I(贪心、dfs)
+
+```cpp
+class Solution {
+public:
+
+    vector<vector<int>> buildTree(vector<vector<int>>& edges) {
+        vector<vector<int>> g(edges.size()+1);
+        for(auto& e : edges) {
+            g[e[0]].push_back(e[1]);
+            g[e[1]].push_back(e[0]);
+        }
+        return g;
+    }
+
+    //遍历整个树 返回以x为根节点的距离为k的点的个数
+    int dfs(int x, int fa, int d, vector<vector<int>>& g, int k) {
+        if(d > k) return 0;
+        int cnt = 1;    //应该初始化为1
+        for(auto& y : g[x]) {
+            if(fa == y) continue;
+            cnt += dfs(y, x, d+1, g, k);
+        }
+        return cnt;
+    }
+
+    vector<int> maxTargetNodes(vector<vector<int>>& edges1, vector<vector<int>>& edges2, int k) {
+        
+        int mx = 0;
+        auto g2 = buildTree(edges2);
+        for(int i = 0; i < g2.size(); i++) {
+            mx = max(mx, dfs(i, -1, 0, g2, k-1));
+        }
+
+        auto g1 = buildTree(edges1);
+        vector<int> ans(g1.size());
+        for(int i = 0; i < g1.size(); i++) {
+            ans[i] = mx+dfs(i, -1, 0, g1, k);
+        }
+        return ans;
+    }
+};
+```
+
+这道题还是花了时间才看明白题，然后就是没有一点思路。。。解法是看成两部分树分别dfs求范围为k和k-1的节点个数。当然这一题还有一点贪心的思路，主要是针对答案看出来的，ans[i]一定是以第一颗树的i节点出发去连线的。这次灵神也是一改常态呀，把dfs和建图都写在了外面了，主要是也考虑到要分别对两棵树建图和dfs，所以就直接封装了起来了
+
+
+
+#### 连接两棵树后最大目标节点数目II(贪心、dfs、树上染色)
+
+```cpp
+class Solution {
+public:
+    vector<int> maxTargetNodes(vector<vector<int>>& edges1, vector<vector<int>>& edges2) {
+        auto count = [] (vector<vector<int>>& edges) {
+            vector<vector<int>> g(edges.size()+1);
+            vector<int> cnt(2); //不能用int cnt[2]{}
+            for(auto& e : edges) {
+                g[e[0]].push_back(e[1]);
+                g[e[1]].push_back(e[0]);
+            }
+            auto dfs = [&](auto&& dfs, int x, int fa, int d) -> void {
+                cnt[d]++;
+                for(auto& y : g[x]) {
+                    if(y == fa) continue;
+                    dfs(dfs, y, x, d^1);
+                }
+            };
+            dfs(dfs, 0, -1, 0);
+            return make_pair(g, cnt);
+        };
+        auto [_, cnt2] = count(edges2);
+        int mx = max(cnt2[0], cnt2[1]); //获取大的那一个集合
+        auto [g, cnt1] = count(edges1);
+        vector<int> ans(g.size(), mx);
+        auto dfs = [&](auto&& dfs, int x, int fa, int d) -> void {
+            ans[x] += cnt1[d];
+            for(auto& y : g[x]) {
+                if(y == fa) continue;
+                dfs(dfs, y,  x, d^1);
+            }
+        };
+        dfs(dfs, 0, -1, 0);
+        return ans;
+    }
+};
+```
+
+主要思想还是和上一题一样，需要分成两个树分别dfs，只不过dfs的实现逻辑就不同了，这里考虑的是奇偶性，就利用到了树上染色的知识，可以联系一下二分图的概念，在树中相同颜色是属于同一种集合，所以只需要遍历一次树即可知道它们属于哪一个集合。
+
 
 
 
@@ -2558,7 +2683,208 @@ void solve() {
 
 
 
+### 小白月赛104
 
+#### B(模拟)
+
+```cpp
+void solve() {
+    string s1, s2;
+    cin >> s1 >> s2;
+    int apos = s1.size(), bpos = s2.size();
+    for(int i = 0, n = s1.size(); i < n; i++) {
+        if(s1[i] == '.') apos = i;
+    }
+    for(int i = 0, n = s2.size(); i < n; i++) {
+        if(s2[i] == '.') bpos = i;
+    }
+    if(apos == bpos) {
+        //实数部分
+        for(int i = 0; i < apos; i++) {
+            if(s1[i] != s2[i]) {
+                cout << "NO";
+                return;
+            }
+        }
+        //小数点后六位
+        for(int i = apos+1; i <= apos+6; i++) {
+            char ai, bi;
+            if(i >= s1.size()) ai = '0';
+            else ai = s1[i];
+            if(i >= s2.size()) bi = '0';
+            else bi = s2[i];
+            if(ai != bi) {
+                cout << "NO";
+                return;
+            }
+        }
+        cout << "YES";
+    } else {
+        cout << "NO";
+    }
+}
+```
+
+这个模拟自己写的又慢又丑，还是得学学别人的代码
+
+
+
+#### D(dfs、并查集)
+
+```cpp
+void solve() {
+    int n, m;
+    cin >> n >> m;
+    vector<int> c(n+1);
+    for(int i = 1; i <= n; i++) cin >> c[i];
+    map<int, int> cnt; //颜色为c[i]的个数
+    vector<vector<int>> g(n+5);
+    while(m--) {
+        int a, b;
+        cin >> a >> b;
+        g[a].push_back(b);
+        g[b].push_back(a);
+    }
+    vector<int> vis(n+1, false);
+    auto dfs = [&](auto&& dfs, int i) -> void {
+        vis[i] = true;
+        cnt[c[i]]++;
+        for(int& x : g[i]) {
+            if(!vis[x]) dfs(dfs, x);
+        }
+    };
+    int ans = 0;
+    for(int i = 1; i <= n; i++) {
+        if(!vis[i]) {
+            cnt.clear();
+            dfs(dfs, i);
+            int sum = 0, mx = 0;
+            for(auto& [_, v] : cnt) {
+                sum += v;
+                mx = max(mx, v);
+            }
+            ans += sum-mx;
+        }
+    }
+    cout << ans;
+}
+```
+
+这一题用unordered_map会超时，gpt的解答是unordered_map底层使用哈希表实现的，虽然插入和查询在O(1)，但是当出现哈希冲突的时候会退化成O(n)，而map的复杂度始终是O(logn)的
+
+
+
+并查集：
+
+```cpp
+void solve() {
+    int n, m;
+    cin >> n >> m;
+    vector<int> c(n+1);
+    for(int i = 1; i <= n; i++) cin >> c[i];
+
+    vector<int> fa(n+1);
+    iota(fa.begin(), fa.end(), 0);
+    auto find = [&](auto&& find, int x) -> int {
+        return x == fa[x] ? fa[x] : fa[x] = find(find, fa[x]);
+    };
+    auto merge = [&](int u, int v) -> void {
+        int fx = find(find, u), fy = find(find, v);
+        if(fx != fy) fa[fx] = fa[fy];
+    };
+
+    while(m--) {
+        int u, v;
+        cin >> u >> v;
+        merge(u, v);
+    }
+
+    //建图 将同一个连通块颜色全部归结到父节点上
+    vector<vector<int>> g(n+1);
+    for(int i = 1; i <= n; i++) {
+        g[find(find, i)].push_back(c[i]);
+    }
+
+    int ans = 0;
+    for(int i = 1; i <= n; i++) {
+        if(0 == g[i].size()) continue;
+        map<int, int> mp;   //c[i]到个数的映射
+        int mx = 0;
+        for(int& x : g[i]) {
+            mp[x]++;
+            mx = max(mx, mp[x]);
+        }
+        ans += g[i].size()-mx;
+    }
+    cout << ans;
+    
+}
+```
+
+
+
+#### E(栈模拟)
+
+```cpp
+void solve() {
+    int n;
+    cin >> n;
+    string s;
+    cin >> s;
+    s = " "+s;
+    vector<int> ans(n+1);
+    stack<int> st;
+    bool flag = false;
+    int cnt = 0;
+    for(int i = 1; i <= 2*n; i++) {
+        if(s[i] == '(') st.push(++cnt);
+        else {
+            if(!st.empty()) {
+                ans[st.top()] = st.size();
+                st.pop();
+            } else {
+                flag = true;
+                break;
+            }
+        }
+    }
+    if(flag) cout << -1 << endl;
+    else {
+        for(int i = 1; i <= n; i++) cout << n-ans[i] << " ";
+    }
+    
+}
+```
+
+相对来说其实比D要简单，但是实现起来还是挺适合学习的，这里的栈保存的是括号编号而不是字符，然后就是要发现这个答案是怎么来的，是通过`n-ans[i]`得到的，也就是总编号-当前编号，就是可以删除的括号对，关键是要想到这个结论，说实话放在前面赛时也不一定写得出来，看到3，4是图论就有点红温了，赛时仅瞄了一眼，虽说发现了是个栈的题，但是也没去深想了，对于大佬们这场应该是随便ak的，但是对于我这种菜鸡的话挺适合补题的，属于是明白知识点，但是都写不出的状态。。。都学的太浅了。。。
+
+
+
+###  周赛70
+
+#### D
+
+```cpp
+void solve() {
+    int n, k;
+    cin >> n >> k;
+    vector<int> a(n+1), suf(n+1);
+    for(int i = 1; i <= n; i++) cin >> a[i];
+    suf[n] = a[n];
+    for(int i = n-1; i > 0; i--) suf[i] = max(suf[i+1], a[i]);
+    if(n < 2) {
+        cout << a[1] << endl;
+        return;
+    }
+    int ans = a[1]+a[n];
+    for(int i = 1; i <= min(n-1, k+1); i++) {
+        ans = max(ans, a[i]+suf[max(i+1, n-(k-(i-1)))]);
+    }
+    cout << ans << endl;
+}
+```
+
+赛时理解题目意思错了，两个操作是可以进行操作而非必须操作，所以这维护了一个后缀最大值，其次难点就在处理下标问题上还是需要注意以下，最后就是枚举左端点来维护最大值ans了。思路算是想到了吧，结果是题意理解错了。。。
 
 
 
@@ -3191,6 +3517,97 @@ void solve() {
 关键是要想到二进制那一块去，也确实，这样倍增指数一定是2的倍数，然后就是要对应这个字符是第几个字符串上，然后通过这个序号求出是奇数个数1还是偶数个数1，奇数个数1就需要大小写反转，这里的i就是k相对于第一个字符串的位置，然后判断bit的奇偶性是否反转字符就行
 
 
+
+### ABC.382
+
+#### C
+
+```cpp
+void solve() {
+    int n, m;
+    cin >> n >> m;
+    vector<int> a(n+1), b(m+1);
+    for(int i = 1; i <= n; i++) cin >> a[i];
+    for(int i = 1; i <= m; i++) cin >> b[i];
+    vector<int> c(200002, INT_MAX);
+    for(int i = 1; i <= n; i++) c[a[i]] = min(c[a[i]], i);
+    for(int i = 2; i <= c.size(); i++) c[i] = min(c[i], c[i-1]);
+    for(int i = 1; i <= m; i++) {
+        if(c[b[i]] <= n) cout << c[b[i]] << endl;
+        else cout << -1 << endl;
+    }
+}
+```
+
+维护一个前缀最小值下标！唉没想到啊，感觉也是没做过的类型吧，啥方法都想了，就是没想到这个前缀最小下标
+
+
+
+写法二：
+
+```cpp
+void solve() {
+    int n, m;
+    cin >> n >> m;
+    vector<int> a(n);
+    vector<pair<int, int>> b(m);
+    for(int i = 0; i < n; i++) cin >> a[i];
+    for(int i = 0; i < m; i++) {
+        int x;
+        cin >> x;
+        b.push_back({x, i});
+    }
+    sort(b.begin(), b.end());
+    vector<int> ans(m, -1);
+    for(int i = 0; i < n; i++) {
+        while(!b.empty() && b.back().first >= a[i]) {
+            ans[b.back().second] = i+1;
+            b.pop_back();
+        }
+    }
+    for(int i = 0; i < m; i++) cout << ans[i] << endl;
+}
+```
+
+这个写法跟比较倾向于我赛时想到的写法，想到了pair，但是想的是给数组a做一个pair，结果就是将数组b做个pair...我怎么这么chun啊
+
+
+
+#### D
+
+```cpp
+//a[i]表示第i个数放a[i], b[i][j]表示第i个答案中放j个数
+int n, m, a[22], b[500002][22], num;
+
+//表示第x个数放y
+void dfs(int x, int y) {
+    if(x == n+1) {
+        num++;
+        for(int j = 1; j <= n; j++) b[num][j] = a[j];
+        return;
+    }
+    for(int i = y; i <= m; i++) {
+        //必须要有的剪枝
+        if(y+(n-x)*10 > m) break;
+        a[x] = i;
+        dfs(x+1, i+10);	//下一个数从x+10开始
+    }
+}
+
+void solve() {
+    cin >> n >> m;
+    dfs(1, 1);
+    cout << num << endl;
+    for(int i = 1; i <= num; i++) {
+        for(int j = 1; j <= n; j++) {
+            cout << b[i][j] << " ";
+        }
+        cout << "\n";
+    }
+}
+```
+
+看完答案后，好像并不是很难的dfs，关掉答案后，这dfs咋写啊。。。感觉这个题出的很好，应该专门卡了没有剪枝的答案。总的来说就是dfs模拟这个过程，所以dfs定义就为dfs(x, y)表示第x个数放y，其实也是很陌生的题，但是就是感觉不是很难，主要是要搞清楚dfs的定义和这两个数组的意思
 
 
 
