--- a/练习赛合集.md
+++ b/练习赛合集.md
@@ -1537,7 +1537,211 @@ public:
 
 
 
+### 双周赛145
 
+#### 3376.破解锁的最少时间I(排列型回溯、上取整、暴力、状压dp)
+
+```cpp
+class Solution {
+public:
+    int findMinimumTime(vector<int>& strength, int K) {
+        int n = strength.size(), ans = INT_MAX;
+        vector<bool> vis(n, false);
+        auto dfs = [&](auto& dfs, int i, int time) -> void {
+            if(time >= ans) return;
+            if(i == n) {
+                ans = min;  //剪枝写法 time >= ans的结果都return掉了
+                //ans = min(ans, time); //未剪枝写法
+                return;
+            }
+            int x = 1+i*K;
+            for(int j = 0; j < n; j++) {
+                if(!vis[j]) {
+                    vis[j] = true;
+                    dfs(dfs, i+1, time+(strength[j]+x-1)/x);    //上取整
+                    vis[j] = false;
+                }
+            }
+        };
+        dfs(dfs, 0, 0);
+        return ans;
+    }
+};
+```
+
+
+
+```cpp
+class Solution {
+public:
+    int findMinimumTime(vector<int>& strength, int K) {
+        int ans = INT_MAX;
+        sort(strength.begin(), strength.end());
+        do {
+            int x = 1, res = 0;
+            for(auto& s : strength) {
+                res += (s+x-1)/x;
+                x += K;
+                cout << s << " ";
+            }
+            ans = min(ans, res);
+            cout << endl;
+        } while(next_permutation(strength.begin(), strength.end()));
+        return ans;
+    }
+};
+```
+
+这是非递归的写法，调用了`next_permutation`函数快速求出数组的全排列，确保正确列出所有可能，应当在调用之前sort一下数组
+
+
+
+```cpp
+class Solution {
+public:
+    int findMinimumTime(vector<int>& strength, int K) {
+        int n = strength.size();
+
+        int s = 1 << n;
+        vector<int> f(s, INT_MAX);
+        f[0] = 0;
+        for(int i = 0; i < s; i++) {
+            int x = 1+K*(n-__builtin_popcount(i));
+            for(int j = 0; j < n; j++) {
+                if(i>>j&1) {
+                    f[i] = min(f[i], f[i^(1<<j)]+(strength[j]+x-1)/x);
+                }
+            }
+        }
+        return f[s-1];
+
+        //dfs(i)表示大小为n的集合i中解锁的最少时间 1表示未选 0表示已选
+        vector<int> memo(1 << n, INT_MAX);
+        auto dfs = [&](auto&& dfs, int i) -> int {
+            if(i == 0) return 0;
+            int& res = memo[i];
+            if(res != INT_MAX) return res;
+            int x = 1+K*(n-__builtin_popcount(i));    //0的个数*K
+            for(int j = 0; j < n; j++) {
+                if(i>>j&1) res = min(res, dfs(dfs, i^(1<<j)) + (strength[j]+x-1)/x);
+            }
+            return res;
+        };
+        return dfs(dfs, (1<<n)-1);
+    }
+};
+```
+
+
+
+#### 3377.使两个整数相等的数位操作(诶式筛预处理、djikstra)
+
+```cpp
+int mx = 10001;
+vector<int> isPrime(mx+1, true);
+
+int init = []() -> int {
+    isPrime[1] = false;
+    for(int i = 2; i <= mx; i++) {
+        if(isPrime[i]) {
+            for(int j = i; j <= mx/i; j++) {
+                isPrime[i*j] = false;
+            }
+        }
+    }
+    return 0;
+}();
+
+class Solution {
+public:
+    int minOperations(int n, int m) {
+        int len_n = to_string(n).length();
+        if(isPrime[n] || isPrime[m]) return -1;
+        priority_queue<pair<int, int>, vector<pair<int, int>>, greater<>> pq;
+        vector<int> dis(pow(10, len_n), INT_MAX);
+        dis[n] = n;
+        pq.emplace(n, n);
+        while(!pq.empty()) {
+            auto [dis_x, x] = pq.top();
+            pq.pop();
+            if(x == m) return dis_x;
+            if(dis_x > dis[x]) continue;
+            int pow10 = 1;
+            for(int v = x; v; v /= 10) {
+                int d = v%10;
+                if(d > 0) {
+                    int y = x-pow10;
+                    int new_d = dis_x+y;
+                    if(!isPrime[y] && new_d < dis[y]) {
+                        dis[y] = new_d;
+                        pq.emplace(new_d, y);
+                    }
+                }
+                if(d < 9) {
+                    int y = x+pow10;
+                    int new_d = dis_x+y;
+                    if(!isPrime[y] && new_d < dis[y]) {
+                        dis[y] = new_d;
+                        pq.emplace(new_d, y);
+                    }
+                }
+                pow10 *= 10;
+            }            
+        }
+        return -1;
+    }
+};
+```
+
+预处理会、dijkstra也会，放到一起就不会了。。。主要是需要发现这个最短路的思路，变化过程中的和就可以看作求最短路的权值了，如果说变成操作次数，那么就可以用bfs来代替这个dijkstra了
+
+
+
+### 周赛427
+
+#### 3379.转换数组(循环数组)
+
+```cpp
+class Solution {
+public:
+    vector<int> constructTransformedArray(vector<int>& nums) {
+        int n = nums.size();
+        vector<int> ans(n);
+        for(int i = 0; i < n; i++) {
+            ans[i] = nums[((i+nums[i])%n+n)%n];
+        }
+        return ans;
+    }
+};
+```
+
+赛时写的好丑啊，写了一个乘100，属于是看到范围捡漏了。就是小于0的情况还是没有处理好，能想到用On的解法，但是在那一步处理的不是很好，可以处理在[-(n-1), -1]的负数但是不会处理更小的负数了，可以先将负数取模落到[-(n-1), -1]的区间上然后就是我的方法了，所以其实就是再套一个取模。。。
+
+
+
+#### 3381.长度可被K整除的子数组的最大元素和(前缀和、枚举右维护左、模运算)
+
+```cpp
+class Solution {
+public:
+    long long maxSubarraySum(vector<int>& nums, int k) {
+        vector<long long> pre(nums.size()+1);
+        for(int i = 1; i <= nums.size(); i++) {
+            pre[i] = pre[i-1]+nums[i-1];
+        }
+        vector<long long> min_s(k, LLONG_MAX/2);
+        long long ans = LLONG_MIN;
+        for(int i = 0; i < pre.size(); i++) {
+            int j = i%k;
+            ans = max(ans, pre[i]-min_s[j]);
+            min_s[j] = min(min_s[j], pre[i]);
+        }
+        return ans;
+    }
+};
+```
+
+这一题不能用滑动窗口来写，因为这一题的数据范围可以有负数，所以不能用滑动窗口，滑动窗口的两个指针只能是通向移动的，由于这里出现了负数，所以l指针有时得往左移有时得往右移。所以这里用前缀和pre[i+1]维护前i个元素的和。然后就是对长度为k的倍数，假设求区间[i, j)的元素和为pre[j]-pre[i]，它们的区间长度为j-i，那么就代表(j-i)%k==0，然后通过模运算的特点，所以j和i是同余的关系，所以这里的min_s数组就是用来维护同余的最小子数组和。这一题看上去简单，但是却涵盖了很多的知识点，还是很好的一道题，把前面的知识稍微捡起来了一下
 
 
 
