--- a/算法技巧及模板总结.md
+++ b/算法技巧及模板总结.md
@@ -634,6 +634,10 @@ public:
 
 
 
+在C++中有专门的api得到一个数组的全排列，只不过为了正确得到一个数组的全排列，应当先`sort`一下数组再调用`next_permutation`
+
+
+
 ##  乘法逆元
 
 这里就直接把灵神的结论搬过来吧~
@@ -847,6 +851,50 @@ int init = []() -> int {
 
 
 
+### 数位DP
+
+以lc2376为例
+
+```cpp
+class Solution {
+public:
+    int countSpecialNumbers(int n) {
+        string s = to_string(n);
+        int m = s.size();
+        //mask表示前面选过数字的集合    这个参数不是必须 是为了解决这个题而设置的mask
+        //isLimit表示当前是否受到了n的约束
+        //isNum表示i前面的数位是否填了数字
+        vector<vector<int>> memo(m, vector<int>(1<<10, -1));
+        auto dfs = [&](auto&& dfs, int i, int mask, bool isLimit, bool isNum) -> int {
+            if(i == m) return isNum;
+            if(!isLimit && isNum && memo[i][mask] != -1) return memo[i][mask];
+            int res = 0;
+            //可以跳过当前数位
+            if(!isNum) res += dfs(dfs, i+1, mask, false, false);
+            //确定上界
+            int up = isLimit ? s[i]-'0' : 9;
+            //枚举数字
+            for(int d = isNum ? 0 : 1; d <= up; d++) {
+                //没选过
+                if((mask>>d&1) == 0) res += dfs(dfs, i+1, mask|(1<<d), isLimit && d == up, true);
+            }
+            if(!isLimit && isNum) memo[i][mask] = res;
+            return res;
+        };
+        //从第0个数位开始
+        return dfs(dfs, 0, 0, true, false);
+    }
+};
+```
+
+关键的关键在于理解为什么`isLimit`和`isNum`为什么不需要记忆化？
+
+因为当`isLimit`为true的时候只有一种情况，就是和n相等，在递归的过程中只会遇到一次。同理当`isNum`为false的时候表示前面的数位都跳过了，这也是只会出现一次的情况，所以直接跳过。总的来说，其实前面两个参数就已经能够确定`isLimit`和`isNum`的情况了，所以这两个参数并不需要记忆化
+
+
+
+
+
 ###  背包问题
 
 ####  01背包
@@ -979,7 +1027,7 @@ public:
 
 
 
-####  最长递增子序列
+####  最长递增子序列(LIS)
 
 大概发现了一种思路，像这种子序列问题+数据范围比较小的题目一般都是用记忆化搜索/dp来做，因为dp本质上来说就是一种暴力，只不过是一种递推的形式，递推关系式难写而已。这个就是想清楚了子问题就比较好想明白这个递推关系式了，dp[i]的最长递增子序列就是在i之前的最长递增子序列的情况下加上1，当然在这前提必须是`if(nums[j] < nums[i])`，下面是两种写法的样例：
 
@@ -1109,7 +1157,7 @@ public:
 
 这种题型也算是困扰我许久的了，在牛客上遇到的比较多，经常看到题解写的树上dfs，来历应该就是在这里了，原来灵神归到了树型dp上了，这里也介绍了`dfs(int x, int fa)`的由来，以及为什么要有个`int fa`这个参数。这里拿2246.相邻字符不同的最长路径举例，为什么这一题可以算是树的直径类型题目呢？虽然看上去是求符合条件的点的个数，其实也就是符合条件的边的个数+1。示例代码如下：
 
-有向图写法：
+有向树写法：
 
 ```cpp
 class Solution {
@@ -1143,7 +1191,7 @@ public:
 
 
 
-无向图写法：
+无向树写法：
 
 ```cpp
 class Solution {
@@ -1183,11 +1231,15 @@ public:
 
 
 
+### 状态压缩DP
+
+我的理解是二进制枚举+DP，由于状态个数可能很多，或者说因为状态数量而导致的超时或超内存，在考虑到能用二进制压缩的时候就变成了状态压缩DP了，能用二进制来压缩的话就使得了状态转移方程缩小了一个维度。然后就是判断能否用状态压缩：考虑状态的时候仅仅只有两个方面，比如说选或不选、true或false，这种只有两面性的东西就可以用状态压缩来做。目前仅仅只达到了理解的程度~
+
+
+
 ##  最大子数组和
 
  Kadane 算法：`dp[i] = max(dp[i-1], 0)+nums[i]`
-
-
 
 
 
@@ -1384,22 +1436,15 @@ public:
 大致模板：
 
 ```cpp
-vector<int> uf(n);
-
-//init
-iota(uf.begin(), uf.end(), 0);
-
-//find
+vector<int> fa(n+1);
+iota(fa.begin(), fa.end(), 0);
 auto find = [&](auto&& find, int x) -> int {
-    return uf[x] == x ? uf[x] : uf[x] = find(find, uf[x]);
+    return x == fa[x] ? fa[x] : fa[x] = find(find, fa[x]);
 };
-
-//union
-for(auto ... : ...) {
-    if(...) {
-        uf[find(find, ...)] = find(find, ...);
-    }
-}
+auto merge = [&](int u, int v) -> void {
+    int fx = find(find, u), fy = find(find, v);
+    if(fx != fy) fa[fx] = fa[fy];
+};
 ```
 
 理解：大致讲述的是连通块和连通块之间的关系，单个连通块通过根来确定，通常要以某个方式为基准(最小下标或最大下标之类的)
@@ -1933,6 +1978,37 @@ public:
 
 
 
+## 二维前缀和
+
+```cpp
+int n, m;
+cin >> n >> m;
+vector<vector<int>> a(n+1, vector<int>(m+1));
+for(int i = 1; i <= n; i++) {
+    for(int j = 1; j <= m; j++) {
+        char c;
+        cin >> c;
+        a[i][j] = c == '*';
+    }
+}
+vector<vector<int>> pre(n+1, vector<int>(m+1));
+for(int i = 1; i <= n; i++) {
+    for(int j = 1; j <= m; j++) {
+        pre[i][j] = pre[i-1][j]+pre[i][j-1]+a[i][j]-pre[i-1][j-1];
+    }
+}
+```
+
+需要画图来理解比较直观，然后就是数组a中"*"表示1，"."表示0，然后在数组a中是以下标1开头的，如果是力扣的题目要注意下标的偏移，当然前缀和数组的长度还是固定在n+1和m+1，就是在状态转移的时候要稍微注意一下，这个知识点最容易错的就是下标和状态转移方程
+
+
+
+## 反悔贪心
+
+是贪心算法的一种扩展，可以从字面上先理解：贪心地解决某个问题，但是在某个时刻发现当前的选择并不是最优选择，这时候可以反悔，通常用到的数据结构就是堆(优先队列)，首次了解是在双周赛144的T3.零数组变换III
+
+
+
 
 
 
@@ -1964,6 +2040,22 @@ public:
 ### 贡献法
 
 这并没有模板，属于是思考问题的方向吧，通常在计数问题上有巧妙之处。就好比正常的计数逻辑，当数据范围扩大的时候正常的计数逻辑会超时，但是如果改变公式的顺序之类的话可能就会达到不一样的效果，通常叫做换个角度思考问题，灵神基本称之为横看成立侧成峰
+
+
+
+### 绝对差
+
+ `arr` 中两个元素的 **间隔** 定义为它们下标之间的 **绝对差** 。更正式地，`arr[i]` 和 `arr[j]` 之间的间隔是 `|i - j|` 。 
+
+这种问题的思考方向通常是前缀和，除此之外还有一种可能就是考虑相邻之间改变了什么，哪2121.相同元素的间隔之和举例，灵神的题解思路是考虑从p[i]到p[j]的时候绝对差改变的规律，它们改变的值是一个等式，式子为：`sum = sum+i*(p[j]-p[i])-(n-i)*(p[j]-p[i])`
+
+
+
+### 子数组计数
+
+通常要往以i下标为结尾的符合条件的子数组长度，最后的答案一般是`ans += r-l+1`或者`ans += f[i]`之类的结果，第一种情况比较符合滑动窗口，第二种就比较符合前缀和或者动态规划
+
+
 
 
 
@@ -2034,3 +2126,9 @@ sort(t.begin(), t.end())
 ###  累和出现的错误
 
 在使用accumulate或者reduce这种求和函数的时候需要注意参数必须都要是同种类型的，再就是一定得先预知你这个数组的元素正负情况，如果在前面有某个操作改变了你的数组出现了负数，然后又没有对负数和0取max这样会导致数组出现负数，从而导致累和的时候和预想答案不一样
+
+
+
+### unordered_map和map
+
+少见的在牛客104月赛中出现的一次错误，因为这两个的错误导致超时的，当代码中初心遍历哈希表的时候最好用map，仅仅只有查询的时候用unordered_map吧，当出现哈希冲突的时候unordered_map的复杂度会退化到O(n)，而map的复杂度永远都是O(logn)的
