--- a/练习赛合集.md
+++ b/练习赛合集.md
@@ -1745,6 +1745,64 @@ public:
 
 
 
+### 双周赛146
+
+#### 3394.判断网格能否被切割成块(合并区间)
+
+```cpp
+class Solution {
+public:
+    bool checkValidCuts(int n, vector<vector<int>>& rectangles) {
+        //基础：56.合并区间
+        auto check = [](vector<pair<int, int>>& r) -> bool {
+            //按照左端点排序
+            sort(r.begin(), r.end());
+            int cnt = 0, max_r = 0;
+            for(auto& [x, y] : r) {
+                //当前左端点大于等于前面最大的右端点，表明可以划分
+                if(x >= max_r) cnt++;
+                max_r = max(max_r, y);
+            }
+            return cnt >= 3;
+        };
+        vector<pair<int ,int>> a, b;
+        for(auto& rec : rectangles) {
+            a.emplace_back(rec[0], rec[2]);
+            b.emplace_back(rec[1], rec[3]);
+        }
+        return check(a) || check(b);
+    }
+};
+```
+
+行和列分开计算，数组a和数组b分成两个区间数组，只要其中一个能划分成3段即可
+
+
+
+### 周赛429
+
+#### 3397.执行操作后不同元素的最大数量(贪心)
+
+```cpp
+class Solution {
+public:
+    int maxDistinctElements(vector<int>& nums, int k) {
+        ranges::sort(nums);
+        int ans = 0, pre = INT_MIN;
+        for(int& x : nums) {
+            x = min(max(x-k, pre+1), x+k);
+            if(x > pre) {
+                ans++;
+                pre = x;
+            }
+        }
+        return ans;
+    }
+};
+```
+
+
+
 
 
 
@@ -3812,6 +3870,121 @@ void solve() {
 ```
 
 看完答案后，好像并不是很难的dfs，关掉答案后，这dfs咋写啊。。。感觉这个题出的很好，应该专门卡了没有剪枝的答案。总的来说就是dfs模拟这个过程，所以dfs定义就为dfs(x, y)表示第x个数放y，其实也是很陌生的题，但是就是感觉不是很难，主要是要搞清楚dfs的定义和这两个数组的意思
+
+
+
+### ABC383
+
+#### B(暴力)
+
+```cpp
+void solve() {
+    int h, w, d;
+    std::cin >> h >> w >> d;
+    vector<pair<int, int>> g;
+
+    for(int i = 0; i < h; i++) {
+        string s;
+        cin >> s;
+        for(int j = 0; j < s.size(); j++) {
+            if(s[j] == '.') g.emplace_back(i, j);
+        }
+    }
+
+    int ans = 0;
+    for(int i = 0; i < g.size(); i++) {
+        for(int j = i+1; j < g.size(); j++) {
+            int cnt = 0;
+            for(int k = 0; k < g.size(); k++) {
+                auto a = g[i], b = g[j], c = g[k];
+                auto check = [&]() -> bool {
+                    if(abs(a.first-c.first)+abs(a.second-c.second) <= d || 
+                    abs(b.first-c.first)+abs(b.second-c.second) <= d) return true;
+                    return false;
+                };
+                cnt += check();
+            }
+            ans = max(ans, cnt);
+        }
+    }
+
+    cout << ans << endl;
+}
+```
+
+是不是暴力的题做少了？暴力都写不出来了。。。
+
+
+
+### ABC.384
+
+#### C(二进制枚举、结构体、运算符重载)
+
+```cpp
+void solve() {
+    vector<int> a(5);
+    cin >> a[0] >> a[1] >> a[2] >> a[3] >> a[4];
+    vector<Node> v;
+    for(int mask = 1; mask <= 31; mask++) {
+        int score = 0;
+        string name = "";
+        for(int i = 0; i < 5; i++) {
+            if(mask>>i&1) {
+                score += a[i];
+                name += "ABCDE"[i];
+            }
+        }
+        //这里用emplace_back会报错
+        v.push_back({mask, score, name});
+    }
+
+    sort(v.begin(), v.end());
+    
+    for(int i = 0, n = v.size(); i < n; i++) {
+        cout << v[i].name << endl;
+    }
+}
+```
+
+
+
+#### D(前缀和、哈希set)
+
+```cpp
+void solve() {
+    int n;
+    ll s;
+    cin >> n >> s;
+    vector<int> a(2*n);
+    vector<ll> pre(2*n+1);
+    ll sum = 0;
+    for(int i = 0; i < n; i++) {
+        cin >> a[i];
+        a[i+n] = a[i];
+        sum += a[i];
+    }
+
+    for(int i = 1; i <= 2*n; i++) pre[i] = pre[i-1]+a[i-1];
+
+    s %= sum;
+    if(s == 0) {
+        cout << "Yes\n";
+        return;
+    }
+    // cout << s << endl;
+
+    set<ll> st;
+    st.insert(0);    //这一行很关键
+    for(int i = 1; i <= 2*n; i++) {
+        if(st.count(pre[i]-s)) {
+            cout << "Yes\n";
+            return;
+        }
+        st.insert(pre[i]);
+    }
+    cout << "No\n";
+}
+```
 
 
 
